# so101_bench

./: .gitignore  .gitmodules  CLAUDE.md  README.md  debug.md  environment.yml  pyproject.toml  test_clean_output.py  test_individual_motors.py
bringup/: camera_configs.json  identify_cameras.sh  progressive_frequency_test.py  test_individual_motors.py
bringup/udev/: 99-cameras.rules  99-so101-arms.rules
dataset_conversion/: convert_lerobot_to_ros2_mcap.py  lerobot_to_ros2_mcap.py
datasets/tasks/pick_and_place_block/: task_config_template.yaml  task_spec.yaml
doc/: raw_dataset_format.md
src/so101_bench/: file_utils.py  image_writer.py  raw_dataset_recorder.py  record_configs.py  recorder_configs.py  task_configurator.py  task_progress_labeler.py
src/so101_bench/notebooks/: debug_smolvla.ipynb  inspect_dataset.ipynb
src/so101_bench/scripts/: create_dataset_splits.py  eval_rollout.py  eval_scorer.py  inspect_dataset_sample_coverage.py  record.py  temp_test_stratification.py  temp_test_yaml.py  test_changing_camera_settings.py
src/so101_bench/scripts/eval/: eval_rollout.py  eval_scorer.py
src/so101_bench/scripts/eval/docs/: evaluation_format.md  model_eval_pipeline.md
src/so101_bench/scripts/record/: raw_dataset_format.md  record.py
src/so101_bench/scripts/record/docs/: raw_dataset_format.md
src/so101_bench/scripts/train/: train.py
tests/: test_raw_dataset_recorder.py  test_task_progress_labeler.py
