[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "so101_bench"
version = "0.0.1"
description = "SO-101 Bench: IL/VLA/RL eval + data tools"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Sherry Chen" }]
dependencies = [
  "numpy",
  "opencv-python",
  "pyyaml",
  "pytest==8.4.1",
  "aiohttp==3.12.15",
  "feetech-servo-sdk==1.0.0",
  "ffmpeg==1.4",
  "hf-transfer==0.1.9",
  "inquirerpy==0.3.4",
  "lerobot",
  "pip==25.2",
  "psutil==7.0.0",
  "wheel==0.45.1",
  "jupyter>=1.1.1",
  "ipykernel>=6.30.1",
  "matplotlib>=3.10.5",
  "plotly>=6.3.1",
]

# Optional dependencies
[project.optional-dependencies]

# SmolVLA policy dependencies (lerobot core deps come from workspace lerobot)
smolvla = [
    "lerobot[smolvla]",  # This pulls in all smolvla deps from the workspace lerobot
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["so101_bench*"]

[tool.uv.workspace]
members = [
    "third_party/lerobot",
]

[tool.uv.sources]
lerobot = { workspace = true }
